PASELC-205 (#111)
* PASELC-135 Add StationsPage

* PASELC-145 Add station detail

* Added toggleButton with VisibilityIcon in order to hide/show password in StationDetailPage

* PASELC-145 Change the component used from ToggleButton to IconButton and set a fixed distance between password and IconButton

* PASELC-135 Updated openApi+integrated API call for retrieve stations+added a regexp in order to temp fix the runtime error caused by an unused model on openApi

* Turned off stations feature

* temp commit

* Localized menuItems

* Fix regexp

* PASELC-135 Updated openApi at the most recent version + change "ID stazione" to "Codice stazione"

* Turned off environment variable and also station feature

* started station form

* Added missing fields and validation

* updated add station form + add tests for station form and channel form

* updated tests for AddEditChannel

* started integration with api for createStation Post

* updated primitiveVersion from integer to string and updated tests

* updated test for addEditChannelPage

* added the creation of a new station

* add control on the SideMenu for the party selected

* integration with PASEL-145 and adjustment

* adjustment

* changed background color of channelPage and add a proprety on the stationTable

* add props on AddEditStation test component

* CustomStationSearchBar + StationTableEmpty, refactored StationPage and fixed getStation mock

* started dashboard overview of EC

* updated dashboard overview EC layout + node sign in EC form layout

* add API call getStationCode call and pre-populted stationCode field in AddEditStationForm

* fixed error in test and add addError for getPaymentType

* updated test for AddEditChannel page and add addError on getChannelDetails

* updated Station test files + adjustem

* updated Station files tests

* updated tests

* updated test for ChannelsTableColumns

* add test for channelPSPList + updated ch
