# openApi/portal-api-docs.json
@@ -3,7 +3,7 @@
   "info": {
     "title": "pagopa-selfcare-ms-backoffice",
     "description": "PagoPa backoffice API documentation",
-    "version": "0.0.109"
+    "version": "0.0.115"
   },
   "servers": [
     {
@@ -1627,6 +1627,167 @@
         ]
       }
     },
+    "/creditor-institutions/{ecCode}": {
+      "get": {
+        "tags": ["creditor-institutions"],
+        "summary": "getCreditorInstitutionDetails",
+        "description": "Service to retrieve specific creditor institution details",
+        "operationId": "getCreditorInstitutionDetailsUsingGET",
+        "parameters": [
+          {
+            "name": "ecCode",
+            "in": "path",
+            "description": "Creditor institution code",
+            "required": true,
+            "style": "simple",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/CreditorInstitutionDetailsResource"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request",
+            "content": {
+              "application/problem+json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Problem"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized",
+            "content": {
+              "application/problem+json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Problem"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Not Found",
+            "content": {
+              "application/problem+json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Problem"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Internal Server Error",
+            "content": {
+              "application/problem+json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Problem"
+                }
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": ["global"]
+          }
+        ]
+      },
+      "put": {
+        "tags": ["creditor-institutions"],
+        "summary": "updateCreditorInstitutionDetails",
+        "description": "Service to update specific creditor institution details",
+        "operationId": "updateCreditorInstitutionDetailsUsingPUT",
+        "parameters": [
+          {
+            "name": "ecCode",
+            "in": "path",
+            "description": "Creditor institution code",
+            "required": true,
+            "style": "simple",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/UpdateCreditorInstitutionDto"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/CreditorInstitutionDetailsResource"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request",
+            "content": {
+              "application/problem+json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Problem"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized",
+            "content": {
+              "application/problem+json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Problem"
+                }
+              }
+            }
+          },
+          "409": {
+            "description": "Conflict",
+            "content": {
+              "application/problem+json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Problem"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Internal Server Error",
+            "content": {
+              "application/problem+json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Problem"
+                }
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": ["global"]
+          }
+        ]
+      }
+    },
     "/institutions": {
       "get": {
         "tags": ["institution"],
@@ -2698,6 +2859,10 @@
             "type": "string",
             "description": "channel's new password"
           },
+          "note": {
+            "type": "string",
+            "description": "channel note description by operation team"
+          },
           "npm_service": {
             "type": "string",
             "description": "npm service"
@@ -2798,6 +2963,11 @@
           "service": {
             "type": "string",
             "description": "channel's service"
+          },
+          "status": {
+            "type": "string",
+            "description": "channel's validation status",
+            "enum": ["APPROVED", "TO_CHECK", "TO_FIX"]
           },
           "target_host": {
             "type": "string",
@@ -4143,6 +4313,10 @@
             "type": "string",
             "description": "Station's new password"
           },
+          "note": {
+            "type": "string",
+            "description": "station note description by operation team"
+          },
           "password": {
             "type": "string",
             "description": "Station's password"
@@ -4236,6 +4410,11 @@
           "stationCode": {
             "type": "string",
             "description": "Station's unique identifier"
+          },
+          "status": {
+            "type": "string",
+            "description": "Station's status",
+            "enum": ["APPROVED", "TO_CHECK", "TO_FIX"]
           },
           "targetHost": {
             "type": "string",
@@ -4337,6 +4516,53 @@
             "items": {
               "$ref": "#/components/schemas/StationResource"
             }
+          }
+        }
+      },
+      "UpdateCreditorInstitutionDto": {
+        "title": "UpdateCreditorInstitutionDto",
+        "required": [
+          "address",
+          "businessName",
+          "creditorInstitutionCode",
+          "enabled",
+          "pspPayment",
+          "reportingFtp",
+          "reportingZip"
+        ],
+        "type": "object",
+        "properties": {
+          "address": {
+            "description": "Creditor Institution's address object",
+            "$ref": "#/components/schemas/CreditorInstitutionAddressDto"
+          },
+          "businessName": {
+            "type": "string",
+            "description": "Creditor Institution's business name"
+          },
+          "creditorInstitutionCode": {
+            "type": "string",
+            "description": "Creditor Institution's code(Fiscal Code)"
+          },
+          "enabled": {
+            "type": "boolean",
+            "description": "Creditor Institution activation state on ApiConfig",
+            "example": false
+          },
+          "pspPayment": {
+            "type": "boolean",
+            "description": "Creditor Institution's is a psp Payment broker",
+            "example": false
+          },
+          "reportingFtp": {
+            "type": "boolean",
+            "description": "Enables flow towards Creditor Institution in fstp mode",
+            "example": false
+          },
+          "reportingZip": {
+            "type": "boolean",
+            "description": "Enables the zipping of the content that goes through fstp",
+            "example": false
           }
         }
       }
