# src/api/PortalApiClient.ts
@@ -309,4 +309,11 @@ export const PortalApi = {
 
     return extractResponse(result, 201, onRedirectToLogin);
   },
+
+  getCreditorInstitutionDetails: async (
+    ecCode: string
+  ): Promise<CreditorInstitutionDetailsResource> => {
+    const result = await apiConfigClient.getCreditorInstitutionDetailsUsingGET({ ecCode });
+    return extractResponse(result, 200, onRedirectToLogin);
+  },
 };
